--- a/ui/src/styles/index.css
+++ b/ui/src/styles/index.css
@@ -45,3 +45,31 @@ nav > #profile {
 #root {
 	height: 100%;
 }
+
+.back-btn {
+	background: none;
+	border: 0;
+	margin: 0;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	font-weight: 600;
+	padding: 0.5rem 1rem;
+	margin: 1rem;
+	margin-left: 0;
+	border-radius: 500px;
+	border: 1px solid transparent;
+	transition: all 0.3s;
+	cursor: pointer;
+}
+
+.back-btn:hover {
+	background-color: #ddd;
+	border: 1px solid gray;
+}
+
+.back-btn img {
+	height: 1rem;
+	margin-right: 0.5rem;
+}
