--- a/ui/src/styles/ViewQuestions.css
+++ b/ui/src/styles/ViewQuestions.css
@@ -39,6 +39,18 @@
 	display: inline;
 }
 
+.option.correct-answer {
+	background-color: #DFFFF6;
+	border: 0.6px solid #34EAB9;
+}
+
+.option.wrong-answer {
+	background-color: #ffdfdf;
+	border: 0.6px solid #ea3434;
+}
+
+
+
 .hints-suggestion {
 	display: flex;
 	flex-direction: row;
@@ -58,6 +70,7 @@
 	box-shadow: 0px 20px 24px rgba(17, 17, 17, 0.06);
 	border-radius: 40px;
 	font-weight: 500;
+	cursor: pointer;
 }
 
 .qn-nav-btns {
@@ -77,6 +90,7 @@
 	color: white;
 	border: 1px solid #3C8DCB;
 	margin-right: 1rem;
+	cursor: pointer;
 }
 
 .question-text img {
